# iot-datastore

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: build-docs.yml  test.yml
docs/: api_usage.md  architecture.md  index.md
src/: app.py
src/api/: api.py
src/api/endpoints/: devices.py  measurements.py  sensors.py
src/core/settings/: api.py  app.py  shared.py
src/crud/: __init__.py  base.py  crud_device.py  crud_sensor.py
src/db/: helper.py  init_db.py
src/models/: __init__.py  device.py  measurement.py  sensor.py
tests/: conftest.py
tests/api/endpoints/: test_devices.py
