[tool.poetry]
name = "iot-datastore"
version = "0.1.0"
description = ""
authors = ["MMartin09 <mmartin09@outlook.at>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
fastapi = "^0.88.0"
beanie = "^1.16.4"

[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.20.0"}
ruff = "^0.0.191"
black = "^22.12.0"
pre-commit = "^2.20.0"
isort = "^5.11.4"


[tool.poetry.group.testing.dependencies]
httpx = "^0.23.1"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
coverage = "^7.0.0"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^8.5.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
